# ChangeLog for app-text/cuneiform-qt
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  cuneiform-qt-9999.ebuild:
  Drop keywords for live ebuild

  30 Apr 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  cuneiform-qt-0.1.2.ebuild, -cuneiform-qt-0.1.2.9999.ebuild,
  cuneiform-qt-9999.ebuild:
  Drop wrong versioned live ebuild, quote EAPI var, use PN, drop S, drop
  unneeded die for equmake4

  30 Apr 2009; A.C.Heron <acheron@front.ru> cuneiform-qt-0.1.2.ebuild,
  +cuneiform-qt-9999.ebuild:
  Changed git ebuild version to 9999, changed qt-gui version >=4.4 to slot 4

  29 Apr 2009; A.C.Heron <acheron@front.ru> +cuneiform-qt-0.1.2.ebuild,
  +cuneiform-qt-0.1.2.9999.ebuild, +metadata.xml:
  New ebuilds for bug #267746
