@@ -1,5 +1,5 @@
 DIST cuneiform-qt-0.1.2.tar.bz2 23252 RMD160 40848545214665b60611b3da290b637066bc09fc SHA1 4558782bd5b40d3798e83649437d43662fd2bc61 SHA256 2b713e5ab855a50ab888b6b033073c2cbb39616b6744dae5a6b2831405d64236
-EBUILD cuneiform-qt-0.1.2.ebuild 733 RMD160 b3ac257b7a54a378721d985d3e23df24ed11d1e9 SHA1 835da4fbad24148298a7daa14c76424015d4395b SHA256 8361d2a1f81d092164a7de2d17e548b0a4e390481e4694660795b7d22587638a
-EBUILD cuneiform-qt-9999.ebuild 766 RMD160 28bdd8b26281737745a1ba6185b91b980cb431c0 SHA1 5672b94ef5cc619d62e7b514f0eb6c133e99b532 SHA256 9524139f4842d30f0c33d34ba7d4b36243e0ded27b70004aae2f314238b4288b
-MISC ChangeLog 824 RMD160 0b709ba5c1c669d209bcb3ef3d2846408b7527c0 SHA1 93da8a457475d0fc162880201c77634579f5c093 SHA256 0d5d61a6d12ce6bd3808ed7aec8f9f5c4dc748bb82486f6c18dc46f87a34397f
+EBUILD cuneiform-qt-0.1.2.ebuild 630 RMD160 c9db9fa5108715dedc310bbf0ad6146e22ffb062 SHA1 d97b823d29c48f4daf22731bb6f36546be795d75 SHA256 78535fa2a2027f37d18c7a05b124d07ce806520b2ccd163eb9768eb5c4a12a4f
+EBUILD cuneiform-qt-9999.ebuild 702 RMD160 b6796633e1f3834cf32bfe83618a99ed4d2bc880 SHA1 eb3b7143c062528276003fbacfe33b286ba63efe SHA256 613fc2a2b23f644bdaec140a433bec0de2be19123ea9735b838e0ce497391780
+MISC ChangeLog 960 RMD160 cfaefd046c5267fb33d5cb78fae3315b70ecdfc2 SHA1 a7bc03d3fae8c9de0522089830a3ecf89a1dd28f SHA256 077832af0bcc23a1c22323658260ac548425599b80bc76105739b7f77879681b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
