@@ -1,6 +1,10 @@
 # ChangeLog for app-text/cuneiform-qt
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Jan 2010; Markos Chandras <hwoarang@gentoo.org>
+  cuneiform-qt-0.1.2.ebuild, cuneiform-qt-9999.ebuild:
+  Migrate to qt4-r2 eclass
 
   25 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   cuneiform-qt-9999.ebuild:
